--- a/mental-health-app/package.json
+++ b/mental-health-app/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-autocomplete-hint": "^1.2.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
     "react-google-places-autocomplete": "^3.0.0",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive-animate-navbar": "^1.1.8",
