--- a/mental-health-app/package.json
+++ b/mental-health-app/package.json
@@ -18,7 +18,7 @@
     "react-google-places-autocomplete": "^3.0.0",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive-animate-navbar": "^1.1.8",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
