--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "bloomer": "^0.6.5",
     "bootstrap": "^4.5.3",
+    "bulma": "^0.9.1",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
