--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "bloomer": "^0.6.5",
     "bootstrap": "^4.5.3",
+    "bulma": "^0.9.1",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-autocomplete-hint": "^1.2.0",
