--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "bloomer": "^0.6.5",
     "bootstrap": "^4.5.3",
+    "bulma": "^0.9.1",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-autocomplete-hint": "^1.2.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
     "react-google-places-autocomplete": "^3.0.0",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive-animate-navbar": "^1.1.8",
